<resources>
    <string name="app_name">CityTours</string>
    <string name="city_tours">CITY TOURS</string>
    <string name="logo_image">Logo Image</string>
    <string name="welcome_text">Welcome Back</string>
    <string name="signup_text">Sign In to continue</string>
    <string name="enter_username">enter username</string>
    <string name="enter_password">enter password</string>
    <string name="login">login</string>
    <string name="new_user_sign_up">New User, SIGN UP</string>
    <string name="forgot_password">forgot password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_to_enjoy_our_service">sign up to enjoy our service</string>
    <string name="full_name">enter full name</string>
    <string name="enter_email_address">enter email address</string>
    <string name="enter_phone_number">enter phone number</string>
    <string name="sign_up_button">sign up</string>
    <string name="update">update</string>

<!--    on Boarding string values-->

    <string name="first_slide_title">Title 1</string>
    <string name="second_slide_title">Title 2</string>
    <string name="third_slide_title">Title 3</string>
    <string name="fourth_slide_title">Title 4</string>

    <!--    on Boarding string values-->

    <string name="first_slide_desc">Are you bored and have no plans</string>
    <string name="second_slide_desc">Are you good at event planning,make cash out of it</string>
    <string name="third_slide_desc">Are you good at event planning,make cash out of it</string>
    <string name="fourth_slide_desc">Team building</string>

    <!--    on Boarding button values-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Skip</string>
    <string name="lets_get_started">Let get started</string>
    <string name="get_away">Get Away</string>
    <string name="search">search</string>
    <string name="home">home</string>


</resources>
