<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Login">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/image_logo"
        android:src="@drawable/car"
        android:transitionName="logo_image"
        android:contentDescription="@string/logo_image"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:transitionName="logo_text"
        android:textSize="40sp"
        android:fontFamily="@font/montserrat"
        tools:targetApi="jelly_bean" />
    <TextView
        android:id="@+id/signUptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_text"
        android:textSize="18sp"
        android:transitionName="logo_text"
        android:fontFamily="@font/montserrat"

        tools:targetApi="jelly_bean" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:hint="@string/enter_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:transitionName="username-transition"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            app:passwordToggleEnabled="true"
            android:hint="@string/enter_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:transitionName="password-transition"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:text="@string/forgot_password"
            tools:targetApi="lollipop" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            android:text="@string/login"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:transitionName="button-transition"
            android:elevation="0dp"
            style="@style/Widget.MyApp.MyButton"
            />

        <TextView
            android:id="@+id/signupLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/new_user_sign_up"
             />





    </LinearLayout>




</LinearLayout>