<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Signup">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/image_logo"
        android:src="@drawable/car"
        android:transitionName="logo_image"
        android:contentDescription="@string/logo_image"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_tours"
        android:transitionName="logo_text"
        android:textSize="40sp"
        android:fontFamily="@font/montserrat"
        tools:targetApi="jelly_bean" />
    <TextView
        android:id="@+id/signUptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:transitionName="logo_text"
        android:text="@string/sign_up_to_enjoy_our_service"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"

        android:layout_marginBottom="20dp"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fullname"
            android:hint="@string/full_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="text"

                />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:transitionName="username-transition"
            android:hint="@string/enter_email_address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textEmailAddress"

                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phoneNumber"
            android:hint="@string/enter_phone_number"
            android:transitionName="username-transition"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"

                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            android:transitionName="username-transition"
            android:hint="@string/enter_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="text"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:transitionName="password-transition"
            app:passwordToggleEnabled="true"
            android:hint="@string/enter_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/black"
        android:onClick="registerUser"
        android:text="@string/sign_up_button"
        android:transitionName="button-transition" />

</LinearLayout>